[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,8 @@
             Hi! I am Gagan Mishra I Have studying Web Application by sir Tanmai Gopal.
         </div>
         <script type="text/javascript" src="/ui/main.js">
+                    alert('Hi, I am Java script');
+
         </script>
     </body>
 </html>
