[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,9 +11,9 @@
         <div class="center text-big bold">
             Hi! I am Gagan Mishra I Have studying Web Application by sir Tanmai Gopal.
         </div>
+        <script>                    alert('Hi, I am Java script');
+</script>
         <script type="text/javascript" src="/ui/main.js">
-                    alert('Hi, I am Java script');
-
         </script>
     </body>
 </html>
