[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Gagan Mishra I Have studying Web Application by sir Tanmai Gopal.
+            Hi! I am Gagandev  Mishra I Have studying Web Application by sir Tanmai Gopal.
         </div>
-        <script>                    alert('Hi, I am Java script');
+        <script>                    alert('Hello Welcome To My WEBAPP');
 </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
