[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Gagandev  Mishra I Have studying Web Application by sir Tanmai Gopal.
         </div>
-        <script>                    alert('Hello Welcome To My WEBAPP');
+        <script
 </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
