Try to use terminal instead of GUI

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal..
         </div>
+	<h3>Hello Freind I had first time i had use vim<h3>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
