[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,10 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal..
+            Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal.
+            </div>
             <h3> Hello Freind I had first time i had use vim <h3>
-        </div>
+                <div><a href="ui/article-one.html">article one</a></div>
 	
         <script type="text/javascript" src="/ui/main.js">
         </script>
