--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Articel_one</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
         <div>
