--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,11 @@
         <title>Articel_one</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-    .conatiner
+    .conatiner{
+        max-width:800px;
+        margin:0 auto;
+        color:grey;
+    }
 </style>
 
     </head>
