[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,7 @@
         <title>Articel_one</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-    .conatiner{
+    .container{
         max-width:800px;
         margin:0 auto;
         color:grey;
@@ -11,7 +11,8 @@
 </style>
 
     </head>
-    <body><div class=container>
+    <body>
+        <div class=container>
         <hr/>
         <h3>Article One</h3>
         <div>
