--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
     .container{
         max-width:800px;
         margin:0 auto;
-        color:light red;
+        color:light-red;
     }
 </style>
 
