[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
         max-width:800px;
         margin:0 auto;
         background color:yellow;
-        padding:800;
+        padding:auto;
     }
 </style>
 
