--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,9 +6,9 @@
     .container{
         max-width:800px;
         margin:0 auto;
-        background color:#FF0000
-;
+        background color:#FF0000;
         padding:auto;
+        font-family:sans-serif;
     }
 </style>
 
