[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
     .container{
         max-width:800px;
         margin:0 auto;
-        background color:#FF0000;
+        background color:grey;
         padding:auto;
         font-family:sans-serif;
     }
