[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,8 @@
             </div>
             <h3> Hello Freind I had first time i had use vim <h3>
                 <div><a href="ui/article-one.html">article one</a></div>
-	
+                <div><a href="ui/article-two.html">article two</a></div>
+	            <div><a href="ui/article-three.html">article three</a></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
