[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,6 +2,16 @@
     <head>
         <title>Article two</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+    .container{
+        max-width:800px;
+        margin:0 auto;
+        background color:grey;
+        padding:auto;
+        font-family:sans-serif;
+    }
+</style>
+
 
     </head>
     <body>
