--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,15 +2,7 @@
     <head>
         <title>Articel_one</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-    .container{
-        max-width:800px;
-        margin:0 auto;
-        background color:grey;
-        padding:auto;
-        font-family:sans-serif;
-    }
-</style>
+      <link href="/ui/style.css" rel="stylesheet"/>
 
     </head>
     <body>
