--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Articel_one</title>
+        <title>Article By GD</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="/ui/style.css" rel="stylesheet"/>
 
