[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal.
             </div>
             <h3> Hello Freind I had first time i had use vim <h3>
+                <script>
+                    alert('Hi,I\'m Gaggan')
+                </script>
                 <div><a href="article-one">article one</a></div>
                 <div><a href="article-two">article two</a></div>
 	            <div><a href="article-three">article three</a></div>
