[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,8 @@
         <div class="center text-big bold">
             Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal.
             </div>
-            <h3> Hello Freind I had first time i had use vim <h3>
+            <div>
+            <h3 text align:"center"> Hello Freind I had first time i had use vim <h3></div>
                 <script>
                     alert('Hi,I\'m Gaggan')
                 </script>
