[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,8 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal.
             </div>
-            <div>
-            <h3 text align:"center"> Hello Freind I had first time i had use vim <h3></div>
+            <h2>Hello This Page is developed By Gagan</h2>
                 <script>
                     alert('Hi,I\'m Gaggan')
                 </script>
