--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal.
             </div>
-            <h2>Hello This Page is developed By Gagan</h2>
+            <h2 text-align: center>Hello This Page is developed By Gagan</h2>
                 <script>
                     alert('Hi,I\'m Gaggan')
                 </script>
