--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="main-text" class="center text-big bold">
             Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal.
             <h3 text-align: center>Hello This Page is developed By Gagan</h3>
             </div>
