--- a/ui/index.html
+++ b/ui/index.html
@@ -4,21 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
             <img src="/ui/madi.png" class="img-medium" id="abc"/>
         </div>
+        <hr/>
         <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am Gagandev  Mishra I Have studying Web Application by Sir Tanmai Gopal.
-            <h3 text-align: center>Hello This Page is developed By Gagan</h3>
-            </div>
-                <script>
-                    alert('Hi,I\'m Gaggan')
-                </script>
-                <div><a href="article-one">article one</a></div>
-                <div><a href="article-two">article two</a></div>
-	            <div><a href="article-three">article three</a></div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+        <h3>Personal</h3>
+        <div>
+            Hi This is Gagan
+        </div>
+        <hr/>
+        <h3>Professional</h3>
+        <div>I'm Student</div>
+       <hr/>
+       <div class="footer">
+           
+       </div>
+       <script type="text/javascript" src="/ui/main.js">
+           
+       </script>
     </body>
 </html>
