--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
         <div>I'm Student</div>
         <hr/>
        <div class="footer">
-           This Button <button id="counter">Click Me!</button>has been clicked <span id="coiunt">0</span> times.
+           This Button <button id="counter">Click Me!</button>has been clicked <span id="count">0</span> times.
            
        </div>
        <script type="text/javascript" src="/ui/main.js">
