--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
            This Button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
            <hr/>
            <input type="text" id="name" placeholder="name"></input>
-           <input type="text" value="submit"></input>
+           <input type="submit" value="submit"></input>
            <ul>
                <li>Hee1</li>
                <li>hee2</li>
