--- a/ui/index.html
+++ b/ui/index.html
@@ -21,11 +21,9 @@
            This Button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
            <hr/>
            <input type="text" id="name" placeholder="name"></input>
-           <input type="submit" value="submit"></input>
-           <ul>
-               <li>Hee1</li>
-               <li>hee2</li>
-               <li>hee3</li>
+           <input type="submit" value="submit"id="submit_btn"></input>
+           <ul id="namelist">
+               
            </ul>
             
        </div>
