--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
            This Button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.
            <hr/>
            <input type="text" id="name" placeholder="name"></input>
-           <input type="submit" value="submit"id="submit_btn"></input>
+           <input type="submit" value="submit"id="submit-btn"></input>
            <ul id="namelist">
                
            </ul>
