--- a/ui/index.html
+++ b/ui/index.html
@@ -22,9 +22,7 @@
            <hr/>
            <input type="text" id="name" placeholder="name"></input>
            <input type="submit" value="submit"id="submitbtn"></input>
-           <ul id="namelist">
-               
-           </ul>
+           <ul id="namelist"></ul>
             
        </div>
        <script type="text/javascript" src="/ui/main.js">
